--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       姓名：陳冠融
       <p>系級：工科四
       <p>學號：E94036241
-      <p><font face="AGCrownC">Hello World！！！</font>
+      <p><font face="Comic Sans">Hello World！！！</font>
     </font></h1>
                       
   </body>
