--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <link rel="stylesheet" type="text/css" href="style.css">
-    <title>自介</title>
+    <title>自介哦</title>
   </head>
   <body>
     <h1><font color="642100">
