--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
       <p>系級：工科四
       <p>學號：E94036241
       <p><font face="Comic Sans">Hello World！！！</font>
+      <div style="background:#0000ff;height:100px;width:100px;position:absolute;"></div>
     </font></h1>
-                      
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="change_color.js"> </script>
   </body>
 </html>
 
