--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <h1><font color="642100">
-      姓名：陳冠融
+      姓名：陳冠融.
       <p>系級：工科四
       <p>學號：E94036241
       <p><font face="Comic Sans">Hello World！！！</font>
