--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
   </head>
   <body>
     <h1><font color="642100">
-      姓名：陳冠融.
+      <p>姓名：陳冠融
       <p>系級：工科四
       <p>學號：E94036241
-      <p><font face="Comic Sans">Hello World！！！</font>
+      <p>Hello World！！！
     </font></h1>
+    <br><h2>選擇文字顏色</h2>
     <div style="background:#0000ff;height:100px;width:100px;position:absolute;"></div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="change_color.js"> </script>
