--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     </font></h1>
     <br><h2>選擇文字顏色</h2>
     <blue style="background:#0000ff;height:100px;width:100px;position:absolute;"></blue>
-    <green style="background:#00ff00;height:100px;width:100px;position:absolute;"></green>
-    <red style="background:#ff0000;height:100px;width:100px;position:absolute;"></red>
+    <green style="background:#00ff00;left:120px;height:100px;width:100px;position:absolute;"></green>
+    <red style="background:#ff0000;left:220px;height:100px;width:100px;position:absolute;"></red>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="change_color.js"> </script>
   </body>
