--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <p>系級：工科四
       <p>學號：E94036241
     </font></h1>
-    <p><h2>選擇文字顏色</h2>
+    <br><h2>選擇文字顏色</h2>
     <div style="background:#0000ff;height:100px;width:100px;position:absolute;"></div>
     <green style="background:#00ff00;left:120px;height:100px;width:100px;position:absolute;"></green>
     <red style="background:#ff0000;left:240px;height:100px;width:100px;position:absolute;"></red>
