--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <title>自介哦</title>
   </head>
   <body>
-    <h1><font color="642100">
+    <font color="642100"><h1>
       <p>姓名：陳冠融
       <p>系級：工科四
       <p>學號：E94036241
-    </font></h1>
+    </h1></font>
     <br><h2>選擇文字顏色</h2>
     <blue style="background:#0000ff;height:100px;width:100px;position:absolute;"></blue>
     <green style="background:#00ff00;left:120px;height:100px;width:100px;position:absolute;"></green>
