--- a/index.html
+++ b/index.html
@@ -1,19 +1,19 @@
 
 <html>
   <head>
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <title>自介哦</title>
+    <!--<link rel="stylesheet" type="text/css" href="style.css">-->
+    <title>自介</title>
   </head>
-  <body>
-    <font color="642100"><h1>
+  <body bgcolor="black">
+    <font color="642100"><h1 align="center">
       <p>姓名：陳冠融
       <p>系級：工科四
       <p>學號：E94036241
     </h1></font>
-    <br><h2>選擇文字顏色</h2>
-    <blue style="background:#0000ff;height:100px;width:100px;position:absolute;"></blue>
-    <green style="background:#00ff00;left:120px;height:100px;width:100px;position:absolute;"></green>
-    <red style="background:#ff0000;left:240px;height:100px;width:100px;position:absolute;"></red>
+    <br><h2 align="center">選擇文字顏色</h2>
+    <blue style="background:#0000ff;height:100px;width:100px;position:absolute;left:50%;margin-left:-170px"></blue>
+    <green style="background:#00ff00;left:120px;height:100px;width:100px;position:absolute;left:50%;margin-left:-50px"></green>
+    <red style="background:#ff0000;left:240px;height:100px;width:100px;position:absolute;left:50%;margin-left:70px"></red>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="change_color.js"> </script>
   </body>
