--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   </head>
   <body bgcolor="black">
     <font color="642100"><h1 align="center">
+      <p style="color:black">.</p>
       <p>姓名：陳冠融
       <p>系級：工科四
       <p>學號：E94036241
