--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <p>系級：工科四
       <p>學號：E94036241
     </h1></font>
-    <br><h2 align="center">選擇文字顏色</h2>
+    <br><h2 align="center" style="color:white>選擇文字顏色</h2>
     <blue style="background:#0000ff;height:100px;width:100px;position:absolute;left:50%;margin-left:-170px"></blue>
     <green style="background:#00ff00;left:120px;height:100px;width:100px;position:absolute;left:50%;margin-left:-50px"></green>
     <red style="background:#ff0000;left:240px;height:100px;width:100px;position:absolute;left:50%;margin-left:70px"></red>
